--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -8,6 +8,8 @@
     <title>E-commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'shop/style.css' %}">
 </head>
 
@@ -26,12 +28,18 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <button type="button" id="cart" data-bs-html="true" class="nav-link btn btn-link" data-bs-container="body"
+                            data-bs-toggle="popover" data-bs-placement="bottom"
+                            data-bs-content="">
+                            Cart
+                        </button>
                     </li>
+
                 </ul>
                 <form class="d-flex">
                     {% csrf_token %}
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="item_name">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                        name="item_name">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
@@ -45,11 +53,11 @@
                 <div class="card" style="min-height: 100%;">
                     <img src="{{product.image}}" class="card-img-top" alt="">
                     <div class="card-body d-flex flex-column">
-                        <h5 class="card-title mt-auto">{{product.title}}</h5>
+                        <h5 id="nm{{product.id}}" class="card-title mt-auto">{{product.title}}</h5>
                         <p class="card-text">£{{product.price}}</p>
                         <div class="mt-auto d-flex justify-content-between">
                             <a href="{% url 'detail' product.id %}" class="btn btn-warning">View</a>
-                            <a href="" class="btn btn-warning">Add</a>
+                            <button id="{{product.id}}" class="btn btn-warning atc">Add</button>
                         </div>
                     </div>
                 </div>
@@ -62,20 +70,70 @@
         <nav aria-label="Page navigation example">
             <ul class="pagination">
                 {% if product_objects.has_previous %}
-                    <li class="page-item"><a class="page-link" href="?page={{product_objects.previous_page_number}}">Previous</a></li>
+                <li class="page-item"><a class="page-link"
+                        href="?page={{product_objects.previous_page_number}}">Previous</a></li>
                 {% endif %}
 
                 {% if product_objects.has_next %}
-                    <li class="page-item"><a class="page-link" href="?page={{product_objects.next_page_number}}">Next</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{product_objects.next_page_number}}">Next</a>
+                </li>
                 {% endif %}
             </ul>
-          </nav>
+        </nav>
     </div>
-
-
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+
+    if (localStorage.getItem('cart') == null) {
+        var cart = {};
+    } else {
+        cart = JSON.parse(localStorage.getItem('cart'));
+    }
+
+    $(document).on('click', '.atc', function () {
+        var item_id = this.id
+        console.log(`${item_id} added to cart`)
+
+        if (cart[item_id] != undefined) {
+            cart[item_id] = cart[item_id] + 1
+        } else {
+            cart[item_id] = 1
+        }
+
+        console.log(cart);
+        localStorage.setItem('cart', JSON.stringify(cart));
+        document.getElementById('cart').innerHTML = "Cart(" + Object.keys(cart).length + ")"
+    })
+
+    document.getElementById('cart').innerHTML = "Cart(" + Object.keys(cart).length + ")"
+
+    var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+    var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+        document.getElementById("cart").setAttribute('data-bs-content', '<h5>This is your cart</h5>')
+        return new bootstrap.Popover(popoverTriggerEl)
+    })
+
+    function DisplayCart(cart){
+        var cartString = "";
+        cartString += "<h5>This is your cart</h5>"
+        var cartIndex = 1;
+
+        for (var x in cart){
+            cartString += cartIndex + ". ";
+            cartString += document.getElementById(`nm${x}`).innerHTML + " Qty:" + cart[x] + "<br>"
+            cartIndex += 1
+        }
+        cartString += "<br><a class='btn btn-warning btn-sm' id='checkout' href='/checkout'>Checkout</a>"
+        document.getElementById("cart").setAttribute('data-bs-content', cartString)
+    }
+
+    DisplayCart(cart)
+
+
+</script>
 
 </html>
