orders + checkout page

--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -54,7 +54,7 @@
                     <img src="{{product.image}}" class="card-img-top" alt="">
                     <div class="card-body d-flex flex-column">
                         <h5 id="nm{{product.id}}" class="card-title mt-auto">{{product.title}}</h5>
-                        <p class="card-text">£{{product.price}}</p>
+                        <p id="price{{product.id}}" class="card-text">{{product.price}}</p>
                         <div class="mt-auto d-flex justify-content-between">
                             <a href="{% url 'detail' product.id %}" class="btn btn-warning">View</a>
                             <button id="{{product.id}}" class="btn btn-warning atc">Add</button>
@@ -99,9 +99,14 @@
         console.log(`${item_id} added to cart`)
 
         if (cart[item_id] != undefined) {
-            cart[item_id] = cart[item_id] + 1
+            quantity = cart[item_id][0] + 1;
+            cart[item_id][0] = quantity;
+            cart[item_id][2] = cart[item_id][2] + parseFloat(document.getElementById("price"+item_id).innerHTML);
         } else {
-            cart[item_id] = 1
+            quantity = 1;
+            price = parseFloat(document.getElementById("price"+item_id).innerHTML);
+            name = document.getElementById("nm"+item_id).innerHTML;
+            cart[item_id]=[quantity,name,price];
         }
 
         console.log(cart);
@@ -122,11 +127,20 @@
         cartString += "<h5>This is your cart</h5>"
         var cartIndex = 1;
 
-        for (var x in cart){
-            cartString += cartIndex + ". ";
-            cartString += document.getElementById(`nm${x}`).innerHTML + " Qty:" + cart[x] + "<br>"
-            cartIndex += 1
-        }
+        let total = 0;
+        for (item in cart) {
+
+        let name = cart[item][1];
+        let quantity = cart[item][0];
+        let price = cart[item][2];
+        total = total + cart[item][2];
+
+        cartString += cartIndex + ". ";
+        cartString += name + " Qty:" + quantity + "<br>"
+        cartIndex += 1
+    }
+
+
         cartString += "<br><a class='btn btn-warning btn-sm' id='checkout' href='/checkout'>Checkout</a>"
         document.getElementById("cart").setAttribute('data-bs-content', cartString)
     }
